--- a/groupomania_frontend/src/index.css
+++ b/groupomania_frontend/src/index.css
@@ -1,5 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+
 body {
-	background: #f5f5f5;
+	background: lightgrey;
 	min-height: 100vh;
+	background-image: ;
 }
